--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,115 +1,32 @@
-* {
-    box-sizing: border-box;
+.row {
+  padding-top: 5%;
 }
 
-body {
-    background-color: #000;
-    padding: 20px;
-    font-family: Arial;
-}
-
-/*Centering Site*/
-.main {
-    max-width: 1000px;
-    margin: auto;
-}
-
-.jumbotron {
-	background: #0081c7;
-}
-
-.display-4,.lead {
-	color: white;
-}
-
-.map {
-  height: 90%;
+#menu {
+  margin-top: 10% auto;
 }
 
 #mapdiv {
-  width: 100%;
-  height: 650px;
-  position: absolute; 
-  top: -10;
-  left: 0;
+  width: 100%; 
+  height: 550px;
 }
-
-.btn-group, .btn-group-vertical {
-  margin-left: 5%;
-}
-
-
-
-h1 {
-    font-size: 50px;
-    word-break: break-all;
-}
-
-.row {
-    margin: 8px -16px;
-}
-
-section {
-	clear: both;
-}
-
-/* Add padding BETWEEN each column (if you want) */
-.row,
-.row > .column {
-    padding: 8px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 33.33%;
-    display: none; /* Hide columns by default */
-}
-
-/* Clear floats after rows */ 
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Content */
-.content {
-    background-color: white;
-    padding: 10px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-    display: block;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: white;
-  cursor: pointer;
-}
-
-/* Add a grey background color on mouse-over */
-.btn:hover {
-  background-color: #ddd;
-}
-
-/* Add a dark background color to the active button */
-.btn.active {
-  background-color: #666;
-   color: white;
-}
-/*///////////////////////////////*/
 
 img {
-  border-radius: 4px;
-  padding: 2px;
+  cursor: zoom-in;
 }
 
-#info {
-  height: 100%;
+#img {
+  width: 100%;
+}
+
+#img > a > img {
+  width: 33%;
+  height: 230px;
+}
+
+/*GRID*/
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
