--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,32 +1,61 @@
+html, body {
+  font-family: 'Montserrat', sans-serif;
+  background: #333;
+}
+
+.dropdown {
+  margin-top: -3%;
+}
+
+/*MAP*/
+#map {
+  width: 100vw;
+  height: 580px
+}
+
 .row {
-  padding-top: 5%;
+  margin-bottom: 1%;
 }
 
 #menu {
   margin-top: 10% auto;
+  text-align: center;
 }
 
-#mapdiv {
-  width: 100%; 
-  height: 550px;
+#select {
+  text-align: center;
+  width: 250px;
+  padding: 5px 35px 5px 5px;
+  font-size: 0.8em;
+  border: 1px solid #ccc;
+  height: 34px;  
+  background: #333;
+  border-radius: 5%;
+  color: white;
+  -webkit-appearance: none; 
+  -moz-appearance: none;
+  appearance: none;   
 }
 
-img {
+.active > img {
   cursor: zoom-in;
 }
 
 #img {
   width: 100%;
+  margin-top: -5%;
 }
 
-#img > a > img {
-  width: 33%;
-  height: 230px;
+.dropdown {
+  margin: 0 auto;
 }
 
-/*GRID*/
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
+.leaflet-popup-content > img {
+  width: 100px;
+  height: 100px;
+}
+
+#imagenes > img {
+  width: 33.33333%;
+  height: auto;
 }
